...
        android:layout_marginTop="100dp"
        android:background="@color/app_background_theme"
        />

    <!-- Register Button -->
    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/app_background_theme"
        android:onClick="registerButtonClick"
        android:text="Register"
        android:textColor="@color/white"
...
